--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -10,11 +10,11 @@
 
       <app-pizza-list></app-pizza-list>
     </mat-tab>
-    <mat-tab label="Pasta & Salads" class="mat-display-4" isActive="true">
+    <mat-tab label="Sandwiches" class="mat-display-4" isActive="true">
 
       <app-salad-list></app-salad-list>
     </mat-tab>
-    <mat-tab label="Classic Sides" class="mat-display-4">
+    <mat-tab label="Desserts" class="mat-display-4">
 
       <app-sides-list></app-sides-list>
     </mat-tab>
