--- a/src/app/pizz-shop/pizz-shop.component.html
+++ b/src/app/pizz-shop/pizz-shop.component.html
@@ -11,12 +11,14 @@
           <mat-card-title>Our Promise to You</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p>
-            The promise of pure, or as Nonna would say, puro, is the foundation of everything we do. From farmer to your doorstep, you deserve only the best. It’s why we pledge to source only the best ingredients from farmers and producers who share our commitment to quality, and it’s why we use recipes and preparation methods that ensure our food is as fresh as possible. It’s a promise that’s easy to keep - trust us, you’ll taste the difference.          </p>
+              The promise of pure, or as Nonna would say, puro, is the foundation of everything we do. From farmer to
+              your
+              doorstep, you deserve only the best. It’s why we pledge to source only the best ingredients from farmers
+              and
+              producers who share our commitment to quality, and it’s why we use recipes and preparation methods that
+              ensure our food is as fresh as possible. It’s a promise that’s easy to keep - trust us, you’ll taste the
+              difference.
         </mat-card-content>
-        <mat-card-actions>
-          <button mat-button routerLink="/menu" routerLinkActive="active">TAKE A LOOK</button>
-        </mat-card-actions>
       </mat-card>
 
 
@@ -24,17 +26,15 @@
   </div>
 
 
-  <div class="card-links" fxLayout fxLayout.lt-sm="column"
-  fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px"
+  <div class="card-links" fxLayout fxLayout.lt-sm="column" fxLayout="row" fxLayoutAlign="start" fxLayoutGap="30px"
     fxLayoutGap.xs="20">
 
     <div class="front-card" fxFlex.gt-md="25" fxFlex.lt-md="50" fxFlex.lt-sm="100">
       <mat-card routerLink="/menu" routerLinkActive="active" class="example-card">
         <mat-card-header>
           <mat-card-title>Signature Pizzas</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../assets/img/front-classic.jpg" alt="Signature Pizzas">
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -42,7 +42,7 @@
             bred for hunting.
           </p>
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions>x``
           <button mat-button>TAKE A LOOK</button>
         </mat-card-actions>
       </mat-card>
@@ -53,9 +53,8 @@
       <mat-card class="example-card" routerLink="/menu" routerLinkActive="active">
         <mat-card-header>
           <mat-card-title>Old Favourites</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../assets/img/front-signature.jpg" alt="Classic Pizza">
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -73,10 +72,9 @@
     <div class="front-card" fxFlex.gt-md="25" fxFlex.lt-md="50" fxFlex.lt-sm="100">
       <mat-card class="example-card" routerLink="/menu" routerLinkActive="active">
         <mat-card-header>
-          <mat-card-title>Pasta & Salads</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Salads & Sandwiches</mat-card-title>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../assets/img/front-sandwich.jpg" alt="Italian Sandwiches">
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -94,10 +92,9 @@
     <div class="front-card" fxFlex.gt-md="25" fxFlex.lt-md="50" fxFlex.lt-sm="100">
       <mat-card class="example-card" routerLink="/menu" routerLinkActive="active">
         <mat-card-header>
-          <mat-card-title>Classic Sides</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Desserts</mat-card-title>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="../../assets/img/front-dessert.jpg" alt="Desserts">
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -112,14 +109,12 @@
 
     </div>
   </div>
-  <div class="banner-bottom" fxLayout fxHide.lt-sm
-  fxLayout="row" fxLayoutAlign="start" fxLayoutGap="50px"
+  <div class="banner-bottom" fxLayout fxHide.lt-sm fxLayout="row" fxLayoutAlign="start" fxLayoutGap="50px"
     fxLayoutGap.xs="0">
-    <div class="front-card" fxFlex="100"  fxFlex.xs="0">
+    <div class="front-card" fxFlex="100" fxFlex.xs="0">
       <mat-card class="example-card">
         <mat-card-header>
-          <mat-card-title>Signature Pizzas</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <mat-card-title>Make Your Own</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p>
