--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,3 +1,23 @@
 mat-form-field {
-  width: 300px;
+  width: auto;
+}
+
+.login {
+  margin-top: 300px;
+  margin-bottom: 300px;
+}
+
+@media only screen and (max-width: 400px) {
+  .login {
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .login {
+    margin-top: 200px;
+    margin-bottom: 200px;
+  }
 }
