--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,3 +1,24 @@
 mat-form-field {
-  width: 300px;
+  width: auto;
 }
+
+
+.signup-form {
+  margin-top: 300px;
+  margin-bottom: 300px;
+}
+
+@media only screen and (max-width: 400px) {
+  .signup-form {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .signup-form {
+    margin-top: 200px;
+    margin-bottom: 200px;
+  }
+}
+
