--- a/src/app/menu/pizza-list/pizza-list.component.css
+++ b/src/app/menu/pizza-list/pizza-list.component.css
@@ -17,7 +17,6 @@
 }
 
 .grid-list {
-
   width: 90%;
   margin: 10px;
 }
@@ -26,26 +25,94 @@ mat-spinner {
   margin: auto;
 }
 
-
-
 .pizza-banner-name-span {
   /* padding: 1rem 1.5rem; */
   -webkit-box-decoration-break: clone;
-  box-decoration-break: clone; }
+  box-decoration-break: clone;
+}
+
+@media (max-width: 500px) {
   .pizza-banner-name-span--1 {
     position: absolute;
     top: 8px;
     left: 16px;
-    font-size:2vw;
-    background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    font-size: 6vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+@media (min-width: 501px) and (max-width: 1100px) {
+  .pizza-banner-name-span--1 {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 4vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+
+@media (min-width: 1101px) {
+  .pizza-banner-name-span--1 {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 2vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+
+@media (max-width: 500px) {
   .pizza-banner-name-span--2 {
     position: absolute;
     bottom: 8px;
     right: 16px;
-    font-size:2vw;
-    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
-  .card__heading-span--3 {
-    background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+    font-size: 4vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
+
+@media (min-width: 501px) and (max-width: 1100px) {
+  .pizza-banner-name-span--2 {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    font-size: 3vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
+
+@media (min-width: 1101px) {
+  .pizza-banner-name-span--2 {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    font-size: 2vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
 
 
 .story {
@@ -55,13 +122,11 @@ mat-spinner {
   color: white;
 }
 
-
-
 .story__img {
   max-width: 100%;
-max-height: 100%;
+  max-height: 100%;
   /* max-width: 100%; */
-    /* height: auto; */
+  /* height: auto; */
   /* height: 100%;
   width: auto; */
   transform: translateX(-4rem) scale(1.4);
@@ -89,16 +154,5 @@ max-height: 100%;
 .story:hover .story__img {
   transform: translateX(-4rem) scale(2);
   filter: blur(3px) brightness(80%);
-  filter: brightness(.5);
+  filter: brightness(0.5);
 }
-
-
-
-
-
-
-
-
-
-
-
