--- a/src/app/menu/pizza-list/pizza-nutrition/pizza-nutrition.component.html
+++ b/src/app/menu/pizza-list/pizza-nutrition/pizza-nutrition.component.html
@@ -1,4 +1,3 @@
-<h1 mat-dialog-title>{{ pizza.subName }}</h1>
 <mat-dialog-content class="nutrition-modal">
 
   <div class="toppings-banner">
@@ -12,37 +11,37 @@
     </h4>
 
   </div>
-  <div>{{ pizza.description }}</div>
+  <div class="mat-body-1">{{ pizza.description }}</div>
 
   <br>
-  <div class="nutrition">
+  <div class="nutrition mat-body-2">
     Calories: {{ pizza.calories }} |
     Fat: {{ pizza.fat }} |
     Transfat: {{ pizza.transfat }} |
     Sodium: {{ pizza.sodium }}
   </div>
 
-  <div class="toppings-title">
-
+  <div class="mat-headline toppings-title">
     Toppings
   </div>
   <br>
   <div [ngStyle]="{'background-color':'primary'}" *ngFor="let topping of pizza.toppings;
   let i = index" class="toppings-list">
-    <div class="toppings-image">
-      <img mat-card-image class="toppings-img" src="assets/img/toppings/{{topping.imagePath}}" [alt]="pizza.name">
-    </div>
-    <div class="toppings-name">
-      {{ topping.name }}
-    </div>
-    <div class="toppings-description">
-      {{ topping.description }}
+    <div class="toppings-item">
+      <div>
+        <img mat-card-image class="toppings-img" src="assets/img/toppings/{{topping.imagePath}}" [alt]="pizza.name">
+      </div>
+      <div class="mat-title">
+        {{ topping.name }}
+      </div>
+      <div class="mat-body-1 topping-description">
+        {{ topping.description }}
+      </div>
     </div>
   </div>
 </mat-dialog-content>
 
-  <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Close</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Order Now</button>
-  </mat-dialog-actions>
-*** There's giant space here and i don't know whay.
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Close</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Order Now</button>
+</mat-dialog-actions>
