--- a/src/app/menu/salad-list/salad-list.component.html
+++ b/src/app/menu/salad-list/salad-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="salad-content">
-<div class="mat-display-2">Pasta and Salad</div>
+<div class="mat-display-2">Sandwiches</div>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5" (window:resize)="onResize($event)"
   class="grid-list" *ngIf="!isLoading">
