--- a/src/app/menu/sides-list/sides-list.component.html
+++ b/src/app/menu/sides-list/sides-list.component.html
@@ -1,5 +1,5 @@
 <div class="side-content">
-  <div class="mat-display-2">Classic Sides</div>
+  <div class="mat-display-2">Desserts</div>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5"
     (window:resize)="onResize($event)" class="grid-list" *ngIf="!isLoading">
@@ -7,7 +7,7 @@
       *ngFor="let side of sides; let i = index" (click)="onOpenNutrition(side)">
       <div class="story">
         <figure class="story_shape">
-          <img src="assets/img/sides/{{side.imagePath}}" [alt]="side.name" class="story__img" layout-fill>
+          <img src="assets/img/desserts/{{side.imagePath}}" [alt]="side.name" class="story__img" layout-fill>
           <div class="sides-banner-name-span">
             <div class="sides-banner-name-span--2">${{side.price}}</div>
             <div class="sides-banner-name-span--1">{{side.name}}</div>
