--- a/src/app/menu/specials-list/specials-list.component.css
+++ b/src/app/menu/specials-list/specials-list.component.css
@@ -26,24 +26,88 @@ mat-spinner {
   margin: auto;
 }
 
-.specials-banner-name-span {
-  /* padding: 1rem 1.5rem; */
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone; }
+@media (max-width: 500px) {
   .specials-banner-name-span--1 {
     position: absolute;
     top: 8px;
     left: 16px;
-    font-size:2vw;
-    background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    font-size: 6vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+@media (min-width: 501px) and (max-width: 1100px) {
+  .specials-banner-name-span--1 {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 4vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+
+@media (min-width: 1101px) {
+  .specials-banner-name-span--1 {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 2vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 185, 0, 0.85),
+      rgba(255, 119, 48, 0.85)
+    );
+  }
+}
+
+@media (max-width: 500px) {
   .specials-banner-name-span--2 {
     position: absolute;
     bottom: 8px;
     right: 16px;
-    font-size:2vw;
-    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
-  .card__heading-span--3 {
-    background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+    font-size: 4vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
+
+@media (min-width: 501px) and (max-width: 1100px) {
+  .specials-banner-name-span--2 {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    font-size: 3vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
+
+@media (min-width: 1101px) {
+  .specials-banner-name-span--2 {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+    font-size: 2vw;
+    background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.85),
+      rgba(40, 180, 133, 0.85)
+    );
+  }
+}
 
 
 .story {
