--- a/src/app/pizz-shop/pizz-shop.component.html
+++ b/src/app/pizz-shop/pizz-shop.component.html
@@ -11,13 +11,13 @@
           <mat-card-title>Our Promise to You</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-              The promise of pure, or as Nonna would say, puro, is the foundation of everything we do. From farmer to
-              your
-              doorstep, you deserve only the best. It’s why we pledge to source only the best ingredients from farmers
-              and
-              producers who share our commitment to quality, and it’s why we use recipes and preparation methods that
-              ensure our food is as fresh as possible. It’s a promise that’s easy to keep - trust us, you’ll taste the
-              difference.
+          The promise of pure, or as Nonna would say, puro, is the foundation of everything we do. From farmer to
+          your
+          doorstep, you deserve only the best. It’s why we pledge to source only the best ingredients from farmers
+          and
+          producers who share our commitment to quality, and it’s why we use recipes and preparation methods that
+          ensure our food is as fresh as possible. It’s a promise that’s easy to keep - trust us, you’ll taste the
+          difference.
         </mat-card-content>
       </mat-card>
 
@@ -37,12 +37,12 @@
         <img mat-card-image src="../../assets/img/front-classic.jpg" alt="Signature Pizzas">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            Pizza made the way you want it! Whether you're craving a traditional Italian pie or a Chicago deep dish,
+            we've got you covered. Made from the freshest ingredients, we import our tomatoes from Italy and source our
+            produce and herbs locally.
           </p>
         </mat-card-content>
-        <mat-card-actions>x``
+        <mat-card-actions>
           <button mat-button>TAKE A LOOK</button>
         </mat-card-actions>
       </mat-card>
@@ -57,9 +57,9 @@
         <img mat-card-image src="../../assets/img/front-signature.jpg" alt="Classic Pizza">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            With tons of healthy options, there is something for everyone at Pizza Projekt. To top it all off, we make
+            our sauce and dough fresh in-house everyday, and our crust is egg and dairy free! We're passionate about our
+            pizzas, and we can't wait to share them with you!
           </p>
         </mat-card-content>
         <mat-card-actions>
@@ -77,9 +77,9 @@
         <img mat-card-image src="../../assets/img/front-sandwich.jpg" alt="Italian Sandwiches">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            Anyone can slap stuff between two slices of bread and call it a sandwich. But what makes it sing?
+            Architecture. The balance of flavors and textures that make each bite harmonious. The care for logistics
+            that keeps a tomato from sliding out. There’s a reason it’s called “building” a sandwich.
           </p>
         </mat-card-content>
         <mat-card-actions>
@@ -97,9 +97,10 @@
         <img mat-card-image src="../../assets/img/front-dessert.jpg" alt="Desserts">
         <mat-card-content>
           <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
+            OUR DESSERTS
+            What makes our frozen, premium desserts a cut above the rest? It’s the combination of the highest quality
+            ingredients and uncompromising quality. We use a high percentage of cream cheese, whipping cream, sour cream
+            and REAL butter, as well as Halal and Kosher certified gelatin.
           </p>
         </mat-card-content>
         <mat-card-actions>
