--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
 
 </mat-sidenav-container>
 
-
+<!--
 <button mat-icon-button>icon</button>
 <button mat-fab>Fab</button>
 <button mat-mini-fab>Mini Fab</button>
@@ -48,5 +48,5 @@
 <h2>This is a h2</h2>
 <h3>This is a h3</h3>
 <h4>This is a h4</h4>
-</div>
+</div> -->
 
