--- a/src/app/menu/pizza-list/pizza-list.component.css
+++ b/src/app/menu/pizza-list/pizza-list.component.css
@@ -129,9 +129,9 @@ mat-spinner {
   /* height: auto; */
   /* height: 100%;
   width: auto; */
-  transform: translateX(-4rem) scale(1.4);
+  /* transform: translateX(-4rem) scale(1.4); */
   /* backface-visibility: hidden; */
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
 }
 
 .story__caption {
